--- a/.github/workflows/push-mirroreum.yml
+++ b/.github/workflows/push-mirroreum.yml
@@ -25,7 +25,7 @@ jobs:
         echo "BUILD_DATE=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
         echo "GIT_SHA=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
         echo "GIT_REF=$(git symbolic-ref -q --short HEAD || git describe --tags --exact-match)" >> $GITHUB_ENV
- 
+
     -
       name: Set up QEMU
       id: qemu
@@ -47,8 +47,8 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.CR_PAT }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     -
       name: Docker build and push
@@ -71,4 +71,3 @@ jobs:
           ${{ env.IMAGE }}:${{ env.BUILD_VER }}
         push: true
         platforms: linux/amd64
-
